--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,13 @@
   gap: 5px;
 }
 
+.light {
+  background-color: none;
+  color: black;
+}
+
+.dark{
+  background-color: rgb(95, 95, 95);
+  color: azure;
+}
+
